[package]
name = "hermitdb"
version = "0.1.0"
authors = ["David Rusu <davidrusu@protonmail.com>"]
description = "A private decentralized database replicated over Git (or any other distributed log)"
license="GPL-2.0"
edition = "2018"

[dependencies]
git2 = "0.8.0"
ring = "0.13.5"
serde = "1.0.82"
serde_derive = "1.0.82"

[dependencies.sled]
version = "0.16.11"
# features = ["zstd"]
# path = "../sled/crates/sled"

[dependencies.crdts]
git = "https://github.com/rust-crdt/rust-crdt"
rev = "3cbdd3aeb0ceaac4e08fe541a822eea2eea93c3f"

[dependencies.bincode]
version = "1.0.1"
features = ["i128"]

[dev-dependencies]
assert_matches = "1.3.0"
quickcheck = "0.7.2"
tempfile = "3.0.1"