[package]
name = "hermitdb"
version = "0.1.0"
authors = ["David Rusu <davidrusu@protonmail.com>"]
description = "A private decentralized database replicated over Git (or any other distributed log)"
license="GPL-2.0"
edition = "2024"

[dependencies]
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
ring = "0.17.14"
serde = "1.0.228"
serde_derive = "1.0.228"
sled = "0.34.7"
crdts = "7.3.2"
bincode = "1.3.3"

[dev-dependencies]
assert_matches = "1.5.0"
quickcheck = "1.0.3"
tempfile = "3.23.0"
